After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783961 - directfb: caps leak
directfb: caps leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal minor
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-06-19 13:03 UTC by Eunhae Choi
Modified: 2017-06-20 06:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
directfb : fix caps leak (1.20 KB, patch)
2017-06-19 13:04 UTC, Eunhae Choi
committed Details | Review

Description Eunhae Choi 2017-06-19 13:03:05 UTC
There is caps leak at gst_dfbvideosink_show_frame().
Comment 1 Eunhae Choi 2017-06-19 13:04:18 UTC
Created attachment 354042 [details] [review]
directfb : fix caps leak
Comment 2 Sebastian Dröge (slomo) 2017-06-20 06:29:17 UTC
commit 4ef53c455b06379dee9d98835cba1467b94e4e0e (HEAD -> master)
Author: Eunhae Choi <eunhae1.choi@samsung.com>
Date:   Mon Jun 19 21:59:29 2017 +0900

    directfb: fix caps leak
    
    add unref in case of error
    
    https://bugzilla.gnome.org/show_bug.cgi?id=783961