directfb: fix caps leak

add unref in case of error

https://bugzilla.gnome.org/show_bug.cgi?id=783961